--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>Title</title>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/react-day-picker/lib/style.css"
+    />
   </head>
   <body>
     <div id="app"></div>
